<resources>
    <string name="app_name">PocketCalcPlus</string>

    <string name="buttonZero">0</string>
    <string name="buttonOne">1</string>
    <string name="buttonTwo">2</string>
    <string name="buttonThree">3</string>
    <string name="buttonFour">4</string>
    <string name="buttonFive">5</string>
    <string name="buttonSix">6</string>
    <string name="buttonSeven">7</string>
    <string name="buttonEight">8</string>
    <string name="buttonNine">9</string>

    <string name="buttonClear">AC</string>
    <string name="buttonDelete">del</string>
    <string name="buttonParenthesis">(   )</string>
    <string name="buttonDecimalPoint">.</string>

    <string name="buttonModulo">%</string>
    <string name="buttonMultiply">*</string>
    <string name="buttonDivide">/</string>
    <string name="buttonSubtract">-</string>
    <string name="buttonAdd">+</string>

    <string name="buttonEquals">=</string>

    <string name="buttonSine">Sin</string>
    <string name="buttonCosine">Cos</string>
    <string name="buttonTangent">Tan</string>

    <string name="buttonLn">ln</string>
    <string name="buttonSquared">x^2</string>
    <string name="buttonSqrt">Sqrt</string>
    <string name="buttonExp">^</string>
    <string name="buttonPi">pi</string>
    <string name="buttonFactorial">x!</string>

    <string name="historyDefault">{BLANK}</string>
    <string name="settings_id">Settings</string>

    <string name="newPackage_title">New package - enter file name</string>
    <string name="openPackage_title">Open package - select file</string>
    <string name="newPart_title">New part - select type</string>
    <string name="exportType_title">Export - select type</string>
    <string name="exportPackage_title">Export - select file</string>
    <string name="addImage_title">Add image - select file</string>
    <string name="inputMode_title">Input mode - select behavior</string>

    <string name="inputMode_forcePen">Pen</string>
    <string name="inputMode_forceTouch">Touch</string>
    <string name="inputMode_auto">Auto</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="theme">Theme</string>
    <string name="background_color">Background Color</string>
    <string name="background_color_summary">Controls the color of the background</string>
    <string name="operation_Color">Operation Color</string>
    <string name="text_Color">Text Color</string>
    <string name="number_Color">Number Color</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
