<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeSci"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ScientificFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/editScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextCalculatorScreenSci"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="number"
                android:textAlignment="viewEnd" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/eigthRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSineSci"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/buttonSine"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/buttonCosineSci"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/buttonCosine"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/buttonTangentSci"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/buttonTangent"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/buttonPiSci"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/buttonPi"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/seventhRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonLnSci"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/buttonLn"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/buttonExponentSci"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/buttonExp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/buttonSquaredSci"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/buttonSquared"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/buttonFactorialSci"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/buttonFactorial"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fifthRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonClearSci"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/buttonClear"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/buttonMultiplySci"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/buttonMultiply"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/buttonDivideSci"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/buttonDivide"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/buttonDeleteSci"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/buttonDelete"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fourthRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSevenSci"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buttonSeven"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/buttonEightSci"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buttonEight"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/buttonNineSci"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buttonNine"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/buttonModuloSci"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/buttonModulo"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/thirdRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonFourSci"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buttonFour"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/buttonFiveSci"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buttonFive"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/buttonSixSci"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buttonSix"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/buttonSubtractSci"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/buttonSubtract"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonOneSci"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buttonOne"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/buttonTwoSci"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/buttonFour"
                android:layout_weight="1"
                android:text="@string/buttonTwo"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/buttonThreeSci"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buttonThree"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/buttonAddSci"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/buttonAdd"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/firstRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonZeroSci"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buttonZero"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/buttonDecimalPointSci"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/buttonDecimalPoint"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/buttonEqualsSci"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/buttonEquals"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/buttonParenthesesSci"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/buttonParenthesis"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
