<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.evan.pocketcalcplus.Scientific_Calc">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextCalculatorScreen"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_above="@id/buttonDelete"

            android:layout_alignParentLeft="true"

            android:layout_alignParentStart="true"
            android:inputType="text"
            android:theme="@style/AppTheme.EditText" />


        <Button
            android:id="@+id/buttonZero"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"

            android:layout_alignParentLeft="true"

            android:layout_alignParentStart="true"
            android:text="@string/buttonZero"
            android:theme="@style/AppTheme.Button.PrimaryAlternate" />

        <Button
            android:id="@+id/buttonOne"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_above="@id/buttonZero"

            android:layout_alignParentLeft="true"

            android:layout_alignParentStart="true"
            android:text="@string/buttonOne"
            android:theme="@style/AppTheme.Button.PrimaryAlternate" />

        <Button
            android:id="@+id/buttonTwo"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_alignTop="@id/buttonOne"

            android:layout_toEndOf="@id/buttonZero"

            android:layout_toRightOf="@id/buttonZero"
            android:text="@string/buttonTwo"
            android:theme="@style/AppTheme.Button.PrimaryAlternate" />

        <Button
            android:id="@+id/buttonThree"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_alignTop="@id/buttonTwo"

            android:layout_toEndOf="@id/buttonDecimalPoint"

            android:layout_toRightOf="@id/buttonDecimalPoint"
            android:text="@string/buttonThree"
            android:theme="@style/AppTheme.Button.PrimaryAlternate" />

        <Button
            android:id="@+id/buttonFour"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_above="@id/buttonOne"

            android:layout_alignParentLeft="true"

            android:layout_alignParentStart="true"
            android:text="@string/buttonFour"
            android:theme="@style/AppTheme.Button.PrimaryAlternate" />

        <Button
            android:id="@+id/buttonFive"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_above="@id/buttonTwo"

            android:layout_toEndOf="@id/buttonOne"

            android:layout_toRightOf="@id/buttonOne"
            android:text="@string/buttonFive"
            android:theme="@style/AppTheme.Button.PrimaryAlternate" />

        <Button
            android:id="@+id/buttonSix"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_alignTop="@id/buttonFive"

            android:layout_toEndOf="@id/buttonTwo"

            android:layout_toRightOf="@id/buttonTwo"
            android:text="@string/buttonSix"
            android:theme="@style/AppTheme.Button.PrimaryAlternate" />

        <Button
            android:id="@+id/buttonSeven"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_above="@id/buttonFour"

            android:layout_alignParentLeft="true"

            android:layout_alignParentStart="true"
            android:text="@string/buttonSeven"
            android:theme="@style/AppTheme.Button.PrimaryAlternate" />

        <Button
            android:id="@+id/buttonEight"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@id/buttonMultiply"

            android:layout_toEndOf="@id/buttonSeven"

            android:layout_toRightOf="@+id/buttonSeven"
            android:text="@string/buttonEight"
            android:theme="@style/AppTheme.Button.PrimaryAlternate" />

        <Button
            android:id="@+id/buttonNine"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_above="@id/buttonSix"

            android:layout_toEndOf="@id/buttonFive"

            android:layout_toRightOf="@id/buttonFive"
            android:text="@string/buttonNine"
            android:theme="@style/AppTheme.Button.PrimaryAlternate" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_above="@id/buttonEquals"

            android:layout_toEndOf="@id/buttonThree"

            android:layout_toRightOf="@id/buttonThree"
            android:text="@string/buttonAdd"
            android:theme="@style/AppTheme.Button.Primary" />

        <Button
            android:id="@+id/buttonSubtract"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_above="@id/buttonAdd"

            android:layout_toEndOf="@id/buttonThree"

            android:layout_toRightOf="@id/buttonThree"
            android:text="@string/buttonSubtract"
            android:theme="@style/AppTheme.Button.Primary" />

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_above="@id/buttonNine"

            android:layout_toEndOf="@id/buttonDivide"

            android:layout_toRightOf="@id/buttonDivide"
            android:text="@string/buttonMultiply"
            android:theme="@style/AppTheme.Button.Primary" />

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_alignTop="@id/buttonMultiply"

            android:layout_toEndOf="@id/buttonClear"

            android:layout_toRightOf="@id/buttonClear"
            android:text="@string/buttonDivide"
            android:theme="@style/AppTheme.Button.Primary" />

        <Button
            android:id="@+id/buttonModulo"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_above="@id/buttonSubtract"

            android:layout_toEndOf="@id/buttonNine"

            android:layout_toRightOf="@id/buttonNine"
            android:text="@string/buttonModulo"
            android:theme="@style/AppTheme.Button.Primary" />

        <Button
            android:id="@+id/buttonDecimalPoint"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"

            android:layout_toEndOf="@id/buttonZero"

            android:layout_toRightOf="@id/buttonZero"
            android:text="@string/buttonDecimalPoint"
            android:theme="@style/AppTheme.Button.Primary" />

        <Button
            android:id="@+id/buttonHistory"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"

            android:layout_toEndOf="@+id/buttonTwo"

            android:layout_toRightOf="@+id/buttonTwo"
            android:text="HIST"
            android:theme="@style/AppTheme.Button.Primary" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_above="@id/buttonModulo"

            android:layout_toEndOf="@id/buttonNine"

            android:layout_toRightOf="@id/buttonNine"
            android:text="@string/buttonDelete"
            android:theme="@style/AppTheme.Button.Primary" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_above="@id/buttonSeven"

            android:layout_alignParentLeft="true"

            android:layout_alignParentStart="true"
            android:text="@string/buttonClear"
            android:theme="@style/AppTheme.Button.Primary" />

        <Button
            android:id="@+id/buttonEquals"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"

            android:layout_toEndOf="@id/buttonHistory"

            android:layout_toRightOf="@id/buttonHistory"
            android:text="@string/buttonEquals"
            android:theme="@style/AppTheme.Button.Primary" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
